--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -17,7 +17,7 @@
              <li><a href="#">Customer Service</a></li>
           </ul>
        </div>
-       <div class="location_main">Help Line  Number : <a href="#">+1 1800 1200 1200</a></div>
+       <div class="location_main">Help Line  Number : <a href="#">+91 1000000000</a></div>
     </div>
 </div>
 <!-- footer section end -->
