--- a/templates/includes/banner.html
+++ b/templates/includes/banner.html
@@ -118,7 +118,7 @@
                 <div class="carousel-item active">
                    <div class="row">
                       <div class="col-sm-12">
-                         <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
+                         <h1 class="banner_taital">Get Started! <br>Choose from thousands of options.</h1>
                          <div class="buynow_bt"><a href="#">Buy Now</a></div>
                       </div>
                    </div>
@@ -126,7 +126,7 @@
                 <div class="carousel-item">
                    <div class="row">
                       <div class="col-sm-12">
-                         <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
+                         <h1 class="banner_taital">Get Started! <br>Choose from hundreds of sellers.</h1>
                          <div class="buynow_bt"><a href="#">Buy Now</a></div>
                       </div>
                    </div>
@@ -134,7 +134,7 @@
                 <div class="carousel-item">
                    <div class="row">
                       <div class="col-sm-12">
-                         <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
+                         <h1 class="banner_taital">Get Started! <br>Get your items delivered anywhere worldwide.</h1>
                          <div class="buynow_bt"><a href="#">Buy Now</a></div>
                       </div>
                    </div>
