--- a/templates/includes/copyright.html
+++ b/templates/includes/copyright.html
@@ -1,6 +1,6 @@
 <!-- copyright section start -->
 <div class="copyright_section">
     <div class="container">
-       <p class="copyright_text">© 2020 All Rights Reserved. Design by <a href="https://html.design">Free html  Templates</a></p>
+       <p class="copyright_text">© 2023 All Rights Reserved. Design by <a href="#">Dayita Chaudhuri</a></p>
     </div>
 </div>
