--- a/templates/includes/banner.html
+++ b/templates/includes/banner.html
@@ -26,7 +26,7 @@
        <div class="container">
           <div class="row">
              <div class="col-sm-12">
-                <div class="logo"><a href="{% url "index" %}"><img src="{% static "images/logo.png" %}"></a></div>
+                <div class="logo"><a href="{% url "index" %}">EShop</a></div>
              </div>
           </div>
        </div>
